<package>
  <name>pal_karto</name>
  <description>
     This package provides a ROS wrapper for OpenKarto.
  </description>
  <version>0.5.0</version>
  <maintainer email="jon.binney@gmail.com">Jon Binney</maintainer>
  <author>Brian Gerkey</author>
  <license>LGPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>sba</build_depend>
  <build_depend>open_karto</build_depend>
  <build_depend>pal_map_utils</build_depend>

  <run_depend>tf</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>sba</run_depend>
  <run_depend>open_karto</run_depend>
  <run_depend>pal_map_utils</run_depend>

</package>


